SNC-5644: Added subwidget token & update icons on media type.

--- a/src/MEGASync/gui/ui/TransferManager.ui
+++ b/src/MEGASync/gui/ui/TransferManager.ui
@@ -27,7 +27,9 @@
     <normaloff>../../../../../../.designer/backup</normaloff>../../../../../../.designer/backup</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">QGroupBox
+   <string notr="true">/*SubWidget;wMediaType;widget;*/
+
+QGroupBox
 {
     font-size: 12px;
     border: none;
@@ -859,7 +861,7 @@ QToolButton
                </sizepolicy>
               </property>
               <property name="icon">
-               <iconset resource="../Resources.qrc">
+               <iconset>
                 <normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</iconset>
               </property>
              </widget>
@@ -889,7 +891,7 @@ QToolButton
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset resource="../Resources.qrc">
+               <iconset>
                 <normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</iconset>
               </property>
              </widget>
@@ -1385,7 +1387,7 @@ QToolButton
                  <string notr="true"/>
                 </property>
                 <property name="icon">
-                 <iconset resource="../Resources.qrc">
+                 <iconset>
                   <normaloff>:/images/transfer_manager/sidebar/search_result_default.png</normaloff>:/images/transfer_manager/sidebar/search_result_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1405,7 +1407,7 @@ QToolButton
                  <string/>
                 </property>
                 <property name="icon">
-                 <iconset resource="../Resources.qrc">
+                 <iconset>
                   <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
                 </property>
                </widget>
@@ -1723,7 +1725,7 @@ QToolButton
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../Resources.qrc">
+               <iconset>
                 <normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -2102,7 +2104,7 @@ QToolButton
                <string>Open links</string>
               </property>
               <property name="icon">
-               <iconset resource="../Resources.qrc">
+               <iconset>
                 <normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2116,7 +2118,7 @@ QToolButton
                <string>Upload</string>
               </property>
               <property name="icon">
-               <iconset resource="../Resources.qrc">
+               <iconset>
                 <normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2130,7 +2132,7 @@ QToolButton
                <string>Download</string>
               </property>
               <property name="icon">
-               <iconset resource="../Resources.qrc">
+               <iconset>
                 <normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2141,7 +2143,7 @@ QToolButton
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset resource="../Resources.qrc">
+               <iconset>
                 <normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2527,7 +2529,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../Resources.qrc">
+             <iconset>
               <normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</iconset>
             </property>
            </widget>
@@ -2613,7 +2615,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../Resources.qrc">
+             <iconset>
               <normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</iconset>
             </property>
            </widget>
@@ -2660,7 +2662,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../Resources.qrc">
+             <iconset>
               <normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</iconset>
             </property>
            </widget>
@@ -2707,7 +2709,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../Resources.qrc">
+             <iconset>
               <normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</iconset>
             </property>
            </widget>
@@ -2780,7 +2782,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../Resources.qrc">
+             <iconset>
               <normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</iconset>
             </property>
            </widget>
@@ -2885,9 +2887,7 @@ QToolButton
   <tabstop>leSearchField</tabstop>
   <tabstop>tSearchCancel</tabstop>
  </tabstops>
- <resources>
-  <include location="../Resources.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>bSearch</sender>
