--- a/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
+++ b/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
@@ -65,8 +65,6 @@
     border: none;
     text-align: left;
     line-height: 16px;
-    padding-left: 20px;
-    padding-right: 12px;
     font-weight: 400;
     color: #FF616366; /*colorToken.text-secondary*/
     font-size: 12px;
@@ -127,8 +125,13 @@
 {
     border: none;
     text-align: left;
-    padding-left: 13px;
+    padding-left: 10px;
     padding-right: 0px;
+}
+
+#gbMediaType QFrame &gt; QLabel
+{
+    padding-right: 18px;
 }
 
 #gbMediaType QFrame[itsOn=true] &gt; QPushButton
@@ -233,27 +236,37 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QPushButton" name="bTitle">
-     <property name="cursor">
-      <cursorShape>PointingHandCursor</cursorShape>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="leftMargin">
+      <number>20</number>
      </property>
-     <property name="layoutDirection">
-      <enum>Qt::RightToLeft</enum>
+     <property name="rightMargin">
+      <number>27</number>
      </property>
-     <property name="text">
-      <string notr="true"/>
-     </property>
-     <property name="icon">
-      <iconset resource="../Resources.qrc">
-       <normaloff>:/images/themed/light/chevron-down_default.svg</normaloff>:/images/themed/light/chevron-down_default.svg</iconset>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-    </widget>
+     <item>
+      <widget class="QPushButton" name="bTitle">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="layoutDirection">
+        <enum>Qt::RightToLeft</enum>
+       </property>
+       <property name="text">
+        <string notr="true"/>
+       </property>
+       <property name="icon">
+        <iconset resource="../Resources.qrc">
+         <normaloff>:/images/themed/light/chevron-down_default.svg</normaloff>:/images/themed/light/chevron-down_default.svg</iconset>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QGroupBox" name="gbMediaType">
